--- a/src/AppBundle/Resources/views/Home/queryRegime.html.twig
+++ b/src/AppBundle/Resources/views/Home/queryRegime.html.twig
@@ -75,7 +75,7 @@
     {% else %}
         <h2 class="description"> Komentarų dar nėra </h2>
     {% endif %}
-
+    <div class="fb-comments" data-href="http://127.0.0.1:8000/regimes/{{ regime.id }}" data-width="500" data-numposts="5"></div>
     {% if app.user is not null %}
     {{ form_start(form) }}
     {{ form_widget(form.comment, {'attr':{'class':'form-control', 'rows':4, 'placeholder':'Parašykite savo komentarą'}}) }}
